--- a/site2.0/html/react_post/package.json
+++ b/site2.0/html/react_post/package.json
@@ -18,7 +18,9 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.4",
     "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
