--- a/site2.0/html/react_post/package.json
+++ b/site2.0/html/react_post/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.4",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.82.0",
